<resources>
    <string name="app_name">NITH OppNet</string>
    <string name="wifi_not_enabled_error">Please enable Wi-Fi to continue</string>
    <string name="port_info">Port Information</string>
    <string name="chat_request_title">Chat Request from %s</string>
    <string name="wd_title_with_count">Wifi-Direct(%s)</string>

    <string name="my_name">Jalaz Kumar</string>
    <string name="my_rollnum">14MI528</string>
    <string name="dummy_message_id">14MI528</string>
    <string name="dummy_message_contents">Assemble at Students park NIT Hamirpur for Nimbus Robowars Event\n Timings: 6:00 PM\n Organiser: Robotics Society NIT Hamirpur</string>

    <string name="institute_name">NIT Hamirpur(H.P)</string>
    <string name="splash_activity_title">Institute\'s First Ever indigenously developed Opportunistic Mobile Adhoc Network!</string>

    <string name="get_name">Name</string>
    <string name="get_rollnum">NITH - Roll Number</string>
    <string name="create_arena">Create OppNet Arena</string>

    <string name="welcome_msg">Welcome</string>

    <string name="loading_condition">LOADING</string>

    <string name="project_name">NITH OppNet</string>
    <string name="project_description">Intra NITH mobile adhoc network based on User Mobility facilitating News Dissemination</string>
    <string name="dept_name">Computer Science and Engineering Department</string>
    <string name="college_name">National Institute of Technology, Hamirpur</string>
    <string name="supervisor_name">Mr. Rajiv Kumar</string>
    <string name="supervisor_designation">Assistant Professor</string>

    <string name="name1">Jalaz Kumar, 14MI528</string>
    <string name="name2">Pritish Chouhan, 14MI516</string>
    <string name="name3">Aarti Ramoul, 14MI547</string>
    <string name="name4">Aditya Thakur, 14MI521</string>
    <string name="name5">Amandeep Prasad, 14MI507</string>
    <string name="name6">Rajat Patial, 14MI512</string>

</resources>
