<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jaykay12.nithoppnet.activities.InfoActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/Large_Margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_description"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="15dp"/>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/nithlogo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dept_name"
        android:gravity="center"
        android:textSize="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:gravity="center"
        android:textSize="14dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:padding="@dimen/Little_Margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUPERVISOR"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_name"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_designation"
            android:gravity="center"
            android:textSize="13dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PROJECT GROUP"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name3"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name4"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name5"
            android:gravity="center"
            android:textSize="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name6"
            android:gravity="center"
            android:textSize="13dp"/>

    </LinearLayout>

</LinearLayout>
